--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.0.1/dist/canvas-confetti.min.js"></script>
   </head>
 
   <body>
     <header class="my-3">
-      <h1 class="display-4 text-center">Lucky Me Lottery</h1>
+      <h1 class="display-4 text-center">🍀Lucky Me Lottery🍀</h1>
     </header>
 
     <main>
@@ -62,19 +62,18 @@
           </div>
         </div>
         <button
-          class="btn btn-outline-secondary choose"
+          class="btn btn-outline-secondary choose lolz"
           type="button"
-          id="pickRandomBtn"
-        >
+          id="pickRandomBtn">
           Select a Name
         </button>
       </div>
     </main>
+
     <footer>
       <!-- place footer here -->
     </footer>
     <!-- Bootstrap JavaScript Libraries -->
-    <script src="script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -86,5 +85,6 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js"></script>
   </body>
 </html>
